--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.27.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
+    "joi-dateonly": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
